vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_if_stmt.vv
fn main() {
	cond := true
	if cond {
		$embed_file(@FILE)
	}
}
